--- a/dom/desafio/index.html
+++ b/dom/desafio/index.html
@@ -2,10 +2,11 @@
 
 <div id="desafio">
     <!-- 1) Preencha a tag <p> abaixo com o seu Nome e Idade - usando Interpolação -->
-    <p>Usando VueJS - SEU_NOME (IDADE)</p>
+    <p>{{ name }}</p>
+    <p> {{ birthday }}</p>
     
     <!-- 2) Exiba sua idade multiplicada por 3 -->
-    <p></p>
+    <p>{{ years }}</p>
     
     <!-- 3) Chame uma função para exibir um número randomico
         entre 0 and 1 (Math.random()) -->
