--- a/dom/template-v6.html
+++ b/dom/template-v6.html
@@ -7,7 +7,7 @@
   <a v-bind:href="link">google</a>
   <hr>
   <p v-html="linkHtml">Google</p>
-  //proteção contra xss, não passando informações internas do site 
+  //proteção contra xss|, não passando informações internas do site 
   <p>{{ linkHtml}}</p>
 </div>
 
