--- a/dom/desafio-04/desafio-04/index.html
+++ b/dom/desafio-04/desafio-04/index.html
@@ -1,5 +1,37 @@
 <link rel="stylesheet" href="styles.css">
-<script src="https://unpkg.com/vue"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+<style>
+	#efeito {
+		width: 100px;
+		height: 100px;
+		border: 1px solid black;
+	}
+
+	.destaque {
+		background-color: red;
+		width: 200px !important;
+	}
+
+	.encolher {
+		background-color: gray;
+		width: 50px !important;
+	}
+	.divCSS{
+		width: 80px;
+		height: 90px;
+		background: blue;
+	}
+	.duvCSS2{
+		color: aqua;
+	}
+	.testeDoTeste{
+		width: 100px;
+		height: 100px;
+		background-color: blueviolet;
+		
+	}
+</style>
 
 <div id="desafio">
 	<!-- 1) Iniciar a execução do efeito usando botão. 
@@ -8,20 +40,20 @@
 	com id "efeito" para associar as classes CSS. -->
 	<h2>#01</h2>
 	<div>
-		<button @click="iniciarEfeito">Iniciar Efeito</button>
-		<div id="efeito"></div>
+		<button @click="aplicar = !aplicar">Iniciar Efeito</button>
+		<div id="efeito" :class="estiloCSS" ></div>
 	</div>
-	
+
 	<!-- 2) Crie duas classes CSS e associe a div usando a
 		sintaxe de array -->
 	<h2>#02</h2>
-	<div>Estou sem classe CSS :(</div>
+	<div :class="['duvCSS2', 'divCSS']">Estou sem classe CSS :(</div>
 
 	<!-- 3) Aplique na div abaixo a classe informada pelo usuário
 		(crie classe CSS de exemplo). -->
 	<h2>#03</h2>
 	<div>
-		<input type="text">
+		<input type="text" v-model="eae">
 		<div></div>
 	</div>
 
@@ -50,4 +82,34 @@
 		<div></div>
 	</div>
 </div>
-<script src="app.js"></script>
+
+<script>
+	new Vue({
+	el: '#desafio',
+	data: {
+		aplicar: false,
+		eae: {
+			cor: 'red'
+		}
+	},
+	methods: {
+		iniciarEfeito() {
+
+		},
+	/*	iniciarProgresso() {
+			setInterval(function(){
+				alert("0","100"),3000
+					})
+		},*/
+	},
+		computed: {
+			estiloCSS(){
+				return{
+					destaque: this.aplicar,
+					encolher: !this.aplicar
+				}
+			}
+		}
+	})
+
+</script>
